Migrating sass @import to @use as it will be deprecated

--- a/client/src/styles/global.scss
+++ b/client/src/styles/global.scss
@@ -1,7 +1,10 @@
 // -------- Imports --------
-@import "colors";
-@import "font";
-@import "transitions";
+/*
+With as * you can use it without prefixes otherwise colors.xy
+*/
+@use "colors" as *;
+@use "fonts" as *;
+@use "transitions" as *;
 
 // -------- Variables --------
 /*
