Header, title and main layout with imports exports ready

--- a/client/src/styles/colors.scss
+++ b/client/src/styles/colors.scss
@@ -1,9 +1,4 @@
-// -------- Dark/Light Mode Colors --------
-$color-light-bg: #ffffff;
-$color-light-text: #222222;
-$color-dark-bg: #1e1e1e;
-$color-dark-text: #ffffff;
-
 // -------- General Colors --------
-$color-primary: #0077ff;
-$color-accent: #ff0055;
+$color-primary: #FFFFFF;
+$color-accent: #e60001;
+$color-dark: #233139;
