Productl ist && product card added, products get new fields + formatter utils

--- a/client/src/styles/colors.scss
+++ b/client/src/styles/colors.scss
@@ -1,4 +1,7 @@
+$product-card-bg: #fcfcfc;
+$product-card-border: #f7f6f8;
+
 // -------- General Colors --------
-$color-primary: #FFFFFF;
+$color-primary: #ffffff;
 $color-accent: #e60001;
 $color-dark: #233139;
