--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -7,3 +7,5 @@ Currently base uses all the files.
 
 @use "./components/header.scss";
 @use "./components/title.scss";
+@use "./components/product_list.scss";
+@use "./components/product_card.scss";
