--- a/client/src/styles/global.scss
+++ b/client/src/styles/global.scss
@@ -17,6 +17,9 @@ These variables can be used in React code as well
   --color-header: #{$color-dark};
   --color-accent: #{$color-accent};
 
+  --product-card-bg: #{$product-card-bg};
+  --product-card-border: #{$product-card-border};
+
   --font-main: #{$font-main};
   --transition-default: #{$transition-default};
 }
