--- a/client/src/styles/components/header.scss
+++ b/client/src/styles/components/header.scss
@@ -33,3 +33,9 @@
 .shopping_cart_text {
   font-size: .75em;
 }
+
+@media screen and (max-width: 350px) {
+  .header_title {
+    display: none;
+  }
+}
