--- a/client/src/styles/components/product_card.scss
+++ b/client/src/styles/components/product_card.scss
@@ -9,6 +9,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  max-width: 250px;
+  margin: auto;
 }
 
 .product_image {
@@ -24,6 +26,11 @@
   font-size: 1.1rem;
   margin: 0.125rem 0;
   color: #333;
+}
+
+.product_title_container {
+  display: flex;
+  justify-content: space-between;
 }
 
 .product_price {
