--- a/client/src/styles/global.scss
+++ b/client/src/styles/global.scss
@@ -38,6 +38,7 @@ body {
   font-family: var(--font-main);
   font-size: 16px;
   line-height: 1.5;
+  min-width: 250px;
   color: var(--color-text);
   background-color: var(--color-bg);
 
