Make the foundation of tooltip

--- a/client/src/styles/colors.scss
+++ b/client/src/styles/colors.scss
@@ -1,5 +1,6 @@
 $product-card-bg: #fcfcfc;
 $product-card-border: #f7f6f8;
+$tooltip-bg: #FDF1D7;
 
 // -------- General Colors --------
 $color-primary: #ffffff;
