--- a/client/src/styles/components/product_card.scss
+++ b/client/src/styles/components/product_card.scss
@@ -48,7 +48,7 @@
   color: #000;
 }
 
-.product_title + .product_price {
+span.product_title_container > p.product_price {
   padding-left: 5px;
 }
 
