--- a/client/src/styles/global.scss
+++ b/client/src/styles/global.scss
@@ -19,6 +19,7 @@ These variables can be used in React code as well
 
   --product-card-bg: #{$product-card-bg};
   --product-card-border: #{$product-card-border};
+  --tooltip-bg: #{$tooltip-bg};
 
   --font-main: #{$font-main};
   --transition-default: #{$transition-default};
