--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -9,3 +9,4 @@ Currently base uses all the files.
 @use "./components/title.scss";
 @use "./components/product_list.scss";
 @use "./components/product_card.scss";
+@use "./components/tooltip.scss";
