Fix scss hover - deprecated darken method - fix padding for grid, remove unused import

--- a/client/src/styles/components/product_list.scss
+++ b/client/src/styles/components/product_list.scss
@@ -2,7 +2,7 @@
   display: grid;
   gap: 2.5rem 1.25rem;
   grid-template-columns: repeat(4, 1fr);
-  padding: 2rem;
+  padding: 0 2rem 2rem 2rem;
   max-width: 1075px;
   margin: 0 auto;
 
