--- a/client/src/styles/components/product_card.scss
+++ b/client/src/styles/components/product_card.scss
@@ -1,3 +1,5 @@
+@use "sass:color";
+
 @use "../colors.scss" as *;
 @use "../transitions.scss" as *;
 
@@ -66,6 +68,6 @@ span.product_title_container > p.product_price {
   transition: background-color $transition-default;
 
   &:hover {
-    background-color: darken($color-accent, 10%);
+    background-color: color.adjust($color-accent, $lightness: -10%);
   }
 }
