--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -10,5 +10,6 @@ Currently base uses all the files.
 @use "./components/product_list.scss";
 @use "./components/product_card.scss";
 @use "./components/tooltip.scss";
+@use "./components/cart.scss";
 
 @use "./mixins/product_mixin.scss";
