Remove unnececssary padding

--- a/client/src/styles/components/product_card.scss
+++ b/client/src/styles/components/product_card.scss
@@ -52,6 +52,10 @@
   color: #000;
 }
 
+.product_title_container .product_price {
+  margin-bottom: 0;
+}
+
 span.product_title_container > p.product_price {
   padding-left: 5px;
 }
