--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -12,4 +12,6 @@ Currently base uses all the files.
 @use "./components/tooltip.scss";
 @use "./components/cart.scss";
 
+@use "./pages/checkout.scss";
+
 @use "./mixins/product_mixin.scss";
